fix: search-page title too long will collapse

--- a/app/assets/stylesheets/base/search.scss
+++ b/app/assets/stylesheets/base/search.scss
@@ -1052,4 +1052,11 @@
   margin-top: 5px;
 }
 
+.pageSearchResults .myConnName,
+.pageSearchResults .myConnIndustry {
+  width:450px;
+  overflow:hidden;
+  white-space: nowrap;
+}
+
 
